[project]
name = "r2j-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "logfire>=3.14.0",
    "mcp-server-fetch>=2025.4.7",
    "mcp[cli]>=1.6.0",
    "npm>=0.1.1",
    "pydantic>=2.11.3",
    "pydantic-ai>=0.1.0",
]
